--- a/index.html
+++ b/index.html
@@ -335,58 +335,58 @@ imeiInput.addEventListener('input', () => {
 
     const form = document.getElementById('form-venta');
     form.addEventListener('submit', function (e) {
-      e.preventDefault();
+  e.preventDefault();
 
-      const imei = document.getElementById("imei-buscar").value.trim();
-      const cliente = form[1].value.trim();
-      const dni = form[2].value.trim();
-      const moneda = document.getElementById("moneda").value;
-      const formaPago = document.getElementById("forma-pago").value;
-      const precioFinal = parseFloat(finalSpan.textContent);
-      const bonificacion = parseFloat(document.getElementById('bonificacion').value) || 0;
-      const montoPesos = parseFloat(document.getElementById('monto-pesos').value) || 0;
-      const montoDolares = parseFloat(document.getElementById('monto-dolares').value) || 0;
-      const observaciones = document.getElementById("observaciones").value.trim();
+  const imei = document.getElementById("imei-buscar").value.trim();
+  const cliente = form[1].value.trim();
+  const dni = form[2].value.trim();
+  const moneda = document.getElementById("moneda").value;
+  const formaPago = document.getElementById("forma-pago").value;
+  const precioFinal = parseFloat(finalSpan.textContent);
+  const bonificacion = parseFloat(document.getElementById('bonificacion').value) || 0;
+  const montoPesos = parseFloat(document.getElementById('monto-pesos').value) || 0;
+  const montoDolares = parseFloat(document.getElementById('monto-dolares').value) || 0;
+  const observaciones = document.getElementById("observaciones").value.trim();
 
-      const venta = {
-        fecha: form[0].value,
-        cliente,
-        dni,
-        imei,
-        modelo: document.getElementById('venta-modelo').textContent,
-        color: document.getElementById('venta-color').textContent,
-        bonificacion,
-        moneda,
-        formaPago,
-        montoPesos,
-        montoDolares,
-        observaciones,
-        creadoEn: new Date().toISOString()
-      };
+  const venta = {
+    fecha: form[0].value,
+    cliente,
+    dni,
+    imei,
+    modelo: document.getElementById('venta-modelo').textContent,
+    color: document.getElementById('venta-color').textContent,
+    bonificacion,
+    moneda,
+    formaPago,
+    montoPesos,
+    montoDolares,
+    observaciones,
+    creadoEn: new Date().toISOString()
+  };
 
-      db.ref('ventas').push(venta)
-  .then(() => {
-    // ✅ Si la venta se guardó bien, eliminamos el producto vendido
-    if (productoKey) {
-      db.ref('mercaderia').child(productoKey).remove()
-        .then(() => {
-          console.log('✅ Producto eliminado de mercadería.');
-        })
-        .catch(err => {
-          console.error('❌ Error al eliminar el producto:', err);
-        });
-    }
+  db.ref('ventas').push(venta)
+    .then(() => {
+      // ✅ Si la venta se guardó bien, eliminamos el producto vendido
+      if (productoKey) {
+        db.ref('mercaderia').child(productoKey).remove()
+          .then(() => {
+            console.log('✅ Producto eliminado de mercadería.');
+          })
+          .catch(err => {
+            console.error('❌ Error al eliminar el producto:', err);
+          });
+      }
 
-    alert("✅ Venta registrada con éxito");
-    form.reset();
-    document.getElementById('datos-celular').classList.add('hidden');
-    location.reload();
-  })
-  .catch(err => {
-    alert('❌ Error al guardar la venta: ' + err.message);
-  });
-
+      alert("✅ Venta registrada con éxito");
+      form.reset();
+      document.getElementById('datos-celular').classList.add('hidden');
+      location.reload(); // Recargar la página después de guardar
+    })
+    .catch(err => {
+      alert('❌ Error al guardar la venta: ' + err.message);
     });
+});
+
   }, 100);
 } else if (tipo === "gasto") {
         contenedor.innerHTML = `
